# Fractals

./: README.md
fractales_julia_cuda/: fractales.ipynb
fractals_c/: mandelbrot.c
fractals_c_cuda/: Makefile  commande_run.txt  mandelbrot.cu
fractals_cpp/: mandelbrot.cpp
fractals_python/: mandelbrot.py
fractals_rust/: Cargo.toml
fractals_rust/src/: main.rs  oldmain.rs
learn_cuda/: kernel  vector_add  vector_add.cu
