[package]
name = "fractals_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#num = "0.4.0"
#ndarray = "0.15.6"
#itertools-num = "0.1.3"
#itertools = "0.10.5"
#meshgrid = "0.1.0"
num-complex = "0.4.2"
array2d = "0.2.1"
image = "0.24.4"
